# ps-projektas

./: .gitignore  AGENTS.md  GEMINI.md  mind.toml  svek.dot
.claude/: CLAUDE.md  settings.json
.claude/skills/brainstorming/: SKILL.md
.claude/skills/codebase-size/: SKILL.md
.codex/: AGENTS.md  README.md
.gemini/: GEMINI.md  settings.json
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_notes/: 3-3-pasirinkta-programavimo-kalba-technologija.md  kurti_kelione_merge_test.puml  sistemos-prototipas.md  todo.md
_refs/: export-images-audit.md
_refs/1st-lab/: 1AtaskaitosTurinys.docx  README.md
_refs/2nd-lab/: 2AtaskaitosTurinys.docx  README.md
_refs/diagrams-new/: class_system_bce.puml  use_case.puml
_refs/diagrams-new-quick/: class_diagram.puml
_refs/diagrams-og/: class_diagram.mmd  use_case.mmd
_refs/moodle-presentation-transcripts/: 1 paskaita.vtt  2 paskaita.vtt  3 paskaita.vtt  4 paskaita.vtt  5 paskaita.vtt  6 paskaita.vtt  7 paskaita.vtt
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: admin_api.py  guest_api.py  traveler_api.py
backend/app/application/: deals_controller.py  trips_controller.py  users_controller.py
backend/app/domain/: entities.py  schemas.py
backend/app/infrastructure/: db.py  repositories.py
backend/tests/: test_admin_api.py  test_guest_api.py  test_health.py  test_traveler_api.py
docs/: project-context.md
frontend/: package-lock.json  package.json
frontend/scripts/: test.cjs
frontend/src/: App.tsx
tools/: generate_sequence_stubs.py
(+300 files in other folders)
