[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.9.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]
